# hmr

./: .gitignore  IMPLEMENTATION-SUMMARY.md  README-mcp-hmr.md  README.md  install-mcp-hmr.sh  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: contributing.md  index.md
docs/getting-started/: installation.md  intro.md  quick-start.md  what-is-hmr.md
docs/integrations/: demo.md  flask.md  mcp.md  uvicorn.md
docs/overrides/: main.html
docs/reactive/: advanced.md  derived.md  effects.md  index.md  signals.md
docs/references/: api.md  fastapi-reloader.md  hmr-daemon.md  index.md  mcp-hmr.md  uvicorn-hmr.md
docs/references/hmr/: api.md  core.md  exec_hack.md  fs.md  hooks.md  index.md  run.md
docs/references/reactivity/: async_primitives.md  collections.md  context.md  helpers.md  index.md  primitives.md
docs/stylesheets/: extra.css  transition.css
examples/celery/: README.md  app.py  pyproject.toml  sender.py  tasks.py  utils.py  worker.py
examples/demo/: pyproject.toml
examples/fastapi/: README.md  pyproject.toml
examples/flask/: README.md  pyproject.toml
examples/flask-hmr-demo/: README.md  app.py  pyproject.toml
examples/mcp/: README.md  client.py  logic.py  main.py  mcp.json  pyproject.toml  server.py
examples/mcp-demo/: README.md  client.py  pyproject.toml  server.py
examples/sanic/: README.md  a.py  app.py  b.py  pyproject.toml  start.py
examples/textual/: README.md  main.py  main.tcss  message.py  pyproject.toml
