[project]
name = "hmr-cookbook"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "fastapi-reloader",
    "hmr~=0.6.0",
    "hmr-daemon",
    "ruff~=0.13.0",
    "uvicorn-hmr",
]

[tool.uv.workspace]
members = ["examples/*", "packages/*"]

[tool.uv.sources]
uvicorn-hmr = { workspace = true }
fastapi-reloader = { workspace = true }
hmr-daemon = { workspace = true }

[tool.pyright]
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = "error"

[tool.ruff]
line-length = 200

[tool.ruff.lint]
extend-select = [
    "FURB",  # refurb
    "RUF",   # ruff
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "W",     # pycodestyle
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "FA",    # flake8-future-annotations
    "TC",    # flake8-type-checking
    "FBT",   # flake8-boolean-trap
    "ISC",   # flake8-implicit-str-concat
    "ARG",   # flake8-unused-arguments
    "PIE",   # flake8-pie
    "PTH",   # flake8-use-pathlib
    "RSE",   # flake8-raise
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "ASYNC", # flake8-async
]

[tool.m.aliases]
s = "uv sync --all-packages"
